--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -475,3 +475,11 @@ h5, h6 {
   height: 10px;
   width: 10px;
 }
+
+.col-6 {
+  flex: 0 0 50% !important;
+}
+
+.col-4 {
+  flex: 0 0 32% !important;
+}
