--- a/frontend/app/styles/encryptable-form.scss
+++ b/frontend/app/styles/encryptable-form.scss
@@ -8,8 +8,8 @@
   display: inline-block;
   border-radius: 5px;
   padding: 7px;
-  width: 40px !important;
-  height: 40px !important;
+  width: 40px;
+  height: 40px;
   background-color: limegreen;
 }
 
