fix style of side nav elements

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -332,6 +332,10 @@ li a {
   padding-left: 0.5rem !important;
 }
 
+.lh-1 {
+  line-height: 1;
+}
+
 .lh-2 {
   line-height: 2;
 }
@@ -480,12 +484,3 @@ h5, h6 {
   color: white;
 }
 
-.team-row-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.team-list-item {
-  margin-top: 4px;
-}
