--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -18,24 +18,26 @@
           <div class="side-nav-bar-teams-list scroll-bar">
             {{#if this.navService.availableTeams}}
               {{#each this.navService.availableTeams as |team|}}
-                <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action team-list-item team-row-container {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}}">
-                  {{#if team.isPersonalTeam}}
-                    <img class="icon icon-button mr-2 team-list-item" src="/assets/images/{{if (eq team this.navService.selectedTeam) "member-white.svg" "member.svg"}}" alt="">
-                  {{else}}
-                    {{#if team.private}}
-                      <img class="icon icon-button mr-2 team-list-item" src="/assets/images/{{if (eq team this.navService.selectedTeam) "encrypted_small-white.svg" "encrypted_small.svg"}}" alt="">
+                <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-baseline {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}}">
+                  <div class="d-flex justify-content-between">
+                    {{#if team.isPersonalTeam}}
+                      <img class="icon icon-button mr-2 lh-1" src="/assets/images/{{if (eq team this.navService.selectedTeam) "member-white.svg" "member.svg"}}" alt="">
                     {{else}}
-                      <img class="icon icon-button mr-2 team-list-item" src="/assets/images/{{if (eq team this.navService.selectedTeam) "members-white.svg" "members.svg"}}" alt="">
+                      {{#if team.private}}
+                        <img class="icon icon-button mr-2 " src="/assets/images/{{if (eq team this.navService.selectedTeam) "encrypted_small-white.svg" "encrypted_small.svg"}}" alt="">
+                      {{else}}
+                        <img class="icon icon-button mr-2" src="/assets/images/{{if (eq team this.navService.selectedTeam) "members-white.svg" "members.svg"}}" alt="">
+                      {{/if}}
                     {{/if}}
-                  {{/if}}
-                  {{#if team.isPersonalTeam}}
-                    <p class="team-list-item">{{truncate this.userService.username 18}}</p>
-                    {{#if (not (eq team.unreadTransfersInFolder undefined))}}
-                      <div class="notification-badge notification-badge-color">{{team.unreadTransfersInFolder}}</div>
+                    {{#if team.isPersonalTeam}}
+                      <p class="lh-1">{{truncate this.userService.username 18}}</p>
+                      {{#if (not (eq team.unreadTransfersInFolder undefined))}}
+                        <div class="notification-badge notification-badge-color">{{team.unreadTransfersInFolder}}</div>
+                      {{/if}}
+                    {{else}}
+                      <p class="lh-1">{{truncate team.name 18}}</p>
                     {{/if}}
-                  {{else}}
-                    <p class="team-list-item">{{truncate team.name 18}}</p>
-                  {{/if}}
+                  </div>
                   {{#if (not team.folders)}}
                   {{else if (and team.folders (or (not (eq team this.navService.selectedTeam)) this.collapsed))}}
                     <img class="icon icon-button-angle float-right" src="/assets/images/{{if (eq team this.navService.selectedTeam) "angle-left-white.svg" "angle-left.svg"}}" alt="<">
