Add encryptable row test

--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -15,7 +15,7 @@
       </LinkTo>
 
       <div class="mx-1">
-        <img class="icon-medium-button d-inline" src="/assets/images/member.svg" alt="file icon">
+        <img class="icon-medium-button d-inline" src="/assets/images/member.svg" alt="person icon">
         <BsTooltip @title={{t "tooltips.sent_by"}} @delayShow="1000" />
       </div>
       <div class="col-6 d-none d-md-block">
@@ -57,7 +57,7 @@
       {{#unless @encryptable.isOseSecret}}
         {{#if this.isTransferredCredentials }}
           <div class="mx-1">
-            <img class="icon-medium-button d-inline" src="/assets/images/member.svg" alt="file icon">
+            <img class="icon-medium-button d-inline" src="/assets/images/member.svg" alt="person icon">
             <BsTooltip @title={{t "tooltips.sent_by"}} @delayShow="1000" />
           </div>
           <div class="col-6 d-none d-md-block sent-by-row">
