--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -32,9 +32,8 @@
 
                     {{#if team.isPersonalTeam}}
                       <p class="lh-1">{{truncate this.userService.username 18}}
-                        {{#if team.unreadTransfersInFolder}}
+                        {{#if team.unreadTransfersInInbox}}
                           <span class="badge badge-small bg-danger rounded-circle border border-light "> </span>
-
                         {{/if}}
                       </p>
                     {{else}}
