--- a/frontend/app/styles/encryptable-form.scss
+++ b/frontend/app/styles/encryptable-form.scss
@@ -39,7 +39,7 @@
   margin-bottom: 0.5rem;
 }
 
-.add-field-dropdown {
+#add-field-dropdown {
   border-color: #CCC;
   width: 15vw;
   height: 35px;
