--- a/app/views/layouts/session.html.haml
+++ b/app/views/layouts/session.html.haml
@@ -15,7 +15,7 @@
     = csrf_meta_tags
     %title Cryptopus
     %link{href: "/styles.css", rel: "stylesheet"}/
-    %script{src: "/application.js"}
+    %script{src: "/javascript/application.js"}
   %body{"data-locale" => I18n.locale}
     = render 'layouts/icons'
     = render 'layouts/navigation'
