implement feedback and rework frontend

--- a/frontend/app/styles/encryptable-form.scss
+++ b/frontend/app/styles/encryptable-form.scss
@@ -5,8 +5,8 @@
 }
 
 .add-field {
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
 }
 
 .delete-field {
@@ -41,7 +41,8 @@
 
 #add-field-dropdown {
   border-color: #CCC;
-  width: 15vw;
+  width: 36%;
+  max-width: 36%;
   height: 35px;
-  margin-left: 1vw;
+  margin-left: 2%;
 }
