--- a/frontend/app/styles/encryptable-form.scss
+++ b/frontend/app/styles/encryptable-form.scss
@@ -41,8 +41,13 @@
 
 #add-field-dropdown {
   border-color: #CCC;
-  width: 36%;
-  max-width: 36%;
+  width: 100%;
+  max-width: 100%;
   height: 35px;
   margin-left: 2%;
+}
+
+.ember-basic-dropdown {
+  width: 36%;
+  max-width: 36%;
 }
